# polymarket-overview

./: .env.example  .gitignore  README.md  pyproject.toml
app/: cli.py  config.py  main.py  models.py  service.py
app/ai/: deepseek.py  fallback.py  prompts.py  provider.py
app/analysis/: aggregators.py  anomalies.py  objects.py  parsers.py  point_estimate.py  probability.py  structurer.py
app/polymarket/: client.py  normalizer.py
app/recall/: ranker.py
app/storage/: db.py  repositories.py  schema.sql
app/web/: routes.py
app/web/static/: app.css  app.js
app/web/templates/: base.html  objects.html  overview.html  review.html  search.html  summary.html
docs/superpowers/plans/: 2026-06-02-polymarket-overview-implementation-plan.md  2026-06-13-point-estimate-synthesis.md  2026-06-14-deterministic-structuring.md
docs/superpowers/specs/: 2026-06-02-polymarket-overview-design.md  2026-06-13-point-estimate-synthesis-design.md  2026-06-14-deterministic-structuring-design.md
tests/: test_aggregators.py  test_ai_provider.py  test_config.py  test_models.py  test_parsers.py  test_point_estimate.py  test_polymarket_client.py  test_polymarket_normalizer.py  test_probability.py  test_recall_ranker.py  test_storage.py  test_structurer.py  test_summarize.py  test_web_routes.py
