[project]
name = "polymarket-overview"
version = "0.1.0"
description = "Local Polymarket macro overview tool"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "httpx[socks]>=0.27.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "rank-bm25>=0.2.2",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "python-dateutil>=2.9.0",
  "scikit-learn>=1.5.0",
  "plotly>=5.22.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "types-python-dateutil>=2.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[tool.setuptools.packages.find]
include = ["app*"]
